# market-oop

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc  resources.qrc  tree.txt
.github/workflows/: ci.yml
.qtcreator/: CMakeLists.txt.user.1c89af3
docs/: CONVENTION.md  WORKFLOW.md
include/: Buyer.h  Cart.h  Market.h  Order.h  OrderItem.h  Product.h  PurchaseHistory.h  SearchHelper.h  Seller.h  User.h  UserFactory.h  Utils.h
include/BUS/: BUS_PurchaseHistory.h  BuyerBUS.h  Buyer_BUS.h  CartBUS.h  Cart_BUS.h  MarketBUS.h  ProductBUS.h  Product_BUS.h  RatingBUS.h  SellerBUS.h  Seller_BUS.h  UserBUS.h  User_BUS.h
include/DAO/: BuyerDAO.h  Buyer_DAO.h  DAO_User.h  OrderDAO.h  ProductDAO.h  Product_DAO.h  RatingDAO.h  SellerDAO.h  UserDAO.h
include/DTO/: BuyerDTO.h  Buyer_DTO.  Buyer_DTO.h  CartDTO.h  Cart_DTO.h  DTO_User.h  DTO_UserFactory  MarketDTO.h  OrderDTO.h  OrderItemDTO.h  OrderItemStatus.h  Product._DTO.h  ProductDTO.h  Product_DTO.h  PurchaseHistoryDTO.h  RatingDTO.h  SellerDTO.h  Seller_DTO.h  UserDTO.h  VoucherDTO.h
include/UI/: AuthController.hj
include/Utils/: Utils.h
include/bus/: MarketBUS.h  SellerBUS.h
include/controllers/: AuthController.h  CartController.h  ProductController.h
include/database/: DatabaseManager.h
include/dto/: MarketDTO.h  SellerDTO.h
include/enums/: OrderItemStatus.h
include/interface/: IMarketRepository.h
include/models/: ProductModel.h
include/repository/: ProductRepository.h  RepositoryFactory.h
qml/: AddEditProductPage.qml  BuyerHomePage.qml  CartPage.qml  CheckoutPage.qml  LoginPage.qml  Main.qml  OrderHistoryPage.qml  ProductCard.qml  ProductDetailPage.qml  ProductSearchPage.qml  ProfilePage.qml  RegisterPage.qml  SellerDashboard.qml  SellerOrderManagementPage.qml
qml/components/common/: FlashSaleTimer.qml
qml/components/layout/: CategoryPanel.qml  FooterBar.qml  HeaderBar.qml
qml/components/sections/: BestSellingSection.qml  BrowseCategorySection.qml  ExploreProductsSection.qml  FlashSaleSection.qml  HeroBanner.qml  ServicesStrip.qml
src/: Buyer.cpp  Cart.cpp  Market.cpp  Product.cpp  PurchaseHistory.cpp  Seller.cpp  User.cpp  UserFactory.cpp  homepage.cpp  homepage.h  main.cpp  productmodel.h
src/BUS/: BuyerBUS.cpp  Buyer_BUS.cpp  CartBUS.cpp  Cart_BUS.cpp  MarketBUS.cpp  ProductBUS.cpp  Product_BUS.cpp  RatingBUS.cpp  SellerBUS.cpp  UserBUS.cpp
src/DAO/: BuyerDAO.cpp  OrderDAO.cpp  ProductDAO.cpp  Product_DAO.cpp  RatingDAO.cpp  SellerDAO.cpp  UserDAO.cpp
src/DTO/: BuyerDTO.cpp  Buyer_DTO.cpp  CartDTO.cpp  Cart_DTO.cpp  MarketDTO.cpp  OrderDTO.cpp  ProductDTO.cpp  Product_DTO.cpp  PurchaseHistoryDTO.cpp  SellerDTO.cpp  UserDTO.cpp
src/UI/: AuthControler.cppj
src/Utils/BUS/: UtilsBUS.cpp
src/bus/: SellerBUS.cpp
src/controllers/: AuthController.cpp  CartController.cpp  ProductController.cpp  authcontroller.cpp  authcontroller.h  cartcontroller.cpp  cartcontroller.h  productcontroller.cpp  productcontroller.h
src/database/: DatabaseManager.cpp
src/dto/: MarketDTO.cpp  SellerDTO.cpp
src/models/: ProductModel.cpp  cartmodel.cpp  cartmodel.h  categorymodel.cpp  categorymodel.h  productmodel.cpp  usermodel.cpp  usermodel.h
src/repository/: ProductRepository.cpp  RepositoryFactory.cpp
src/services/: apiservice.cpp  apiservice.h  storageservice.cpp  storageservice.h
tests/: BUSTest.cpp  CartTests.cpp  DBTests.cpp  ImagesTests.cpp  OrderTests.cpp  ProductTests.cpp  SellerTests.cpp  TestDbListener.cpp  TestDbListener.h  TestEnvironment.cpp  TestEnvironment.h  TestMain.cpp  TestsCommon.h  UserTests.cpp  UtilsTests.cpp
